tests/int/snapshots/integration__int__use_command__should_use_command_overview_match.snap
---
source: tests/int/use_command.rs
info:
  program: crawk
  args:
    - use
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: the following required arguments were not provided:
  <MODULE_PATH>

Usage: crawk use <MODULE_PATH>

For more information, try '--help'.
